README: fix Quick Start operate example and operations list (#82)
A multi-column operate cannot write to an existing column, so the example threw. Use real print-df and compute output from Employees-example.csv. sort is an external sort outside the pipeline and melt is a compute option. List outer-join and the column functions. Restore the deps.edn alias note, the Agrona error message, the Aeron directory and the log backup.