@@ -11,7 +11,7 @@ A Clojure dataframe library for **larger-than-memory** datasets. Process million
 |---------|-------------|
 | **Larger than memory** | Stream data from disk—no need to fit everything in RAM |
 | **Lazy & parallel** | Operations are pipelined and executed across multiple threads |
-| **Full dataframe API** | Filter, transform, group-by, aggregate, join—everything you expect |
+| **Relational operations** | Filter, transform, group-by, aggregate, join, with arbitrary Clojure functions |
 | **File-to-file** | Read CSV in, write CSV out, with built-in IO |
 | **Native types** | Works with standard Clojure and Java types |
 | **Faster than Dask** | [Benchmarks](https://clojure-finance.github.io/clojask-website/pages-output/about/#benchmarks) show significant speedups on large datasets |
@@ -28,35 +28,44 @@ A Clojure dataframe library for **larger-than-memory** datasets. Process million
 com.github.clojure-finance/clojask {:mvn/version "2.0.5"}
 ```
 
-**Basic example:**
+Both also need two JVM flags, see [Requirements](#requirements).
+
+**Basic example** (using [Employees-example.csv](test/clojask/Employees-example.csv)):
 ```clojure
 (require '[clojask.dataframe :as ck])
 
 ;; Load a CSV
-(def df (ck/dataframe "employees.csv"))
+(def df (ck/dataframe "Employees-example.csv"))
 
-;; Preview the data
+;; Preview the data (the second row shows each column's type)
 (ck/print-df df)
-;; | Employee | EmployeeName | Department | Salary   | UpdateDate |
-;; |----------|--------------|------------|----------|------------|
-;; | 1        | Alice        | 11         | 300      | 2019/12/21 |
-;; | 2        | Bob          | 12         | 400      | 2018/05/23 |
+;; |         Employee |     EmployeeName |       Department |           Salary |       UpdateDate |
+;; |------------------+------------------+------------------+------------------+------------------|
+;; | java.lang.String | java.lang.String | java.lang.String | java.lang.String | java.lang.String |
+;; |                1 |            Alice |               11 |              300 |       2020/12/12 |
+;; |                2 |              Bob |               11 |              600 |       2020/12/01 |
 ;; ...
 
 ;; Set column types
 (ck/set-type df "Salary" "double")
 (ck/set-type df "UpdateDate" "date:yyyy/MM/dd")
 
-;; Transform data: give Bob a raise
-(ck/operate df 
-  (fn [name salary] 
+;; Transform data: give Bob a raise, as a new column
+;; (an operation over several columns must write to a new column)
+(ck/operate df
+  (fn [name salary]
     (if (= name "Bob") (+ salary 100) salary))
-  ["EmployeeName" "Salary"] 
-  "Salary")
+  ["EmployeeName" "Salary"]
+  "NewSalary")
 
 ;; Compute with 8 threads, output to file
-(ck/compute df 8 "results.csv" 
-  :select ["Employee" "EmployeeName" "Department" "Salary"])
+(ck/compute df 8 "results.csv"
+  :select ["Employee" "EmployeeName" "Department" "NewSalary" "UpdateDate"])
+;; results.csv:
+;; Employee,EmployeeName,Department,NewSalary,UpdateDate
+;; 1,Alice,11,300.0,2020/12/12
+;; 2,Bob,11,700.0,2020/12/01
+;; ...
 ```
 
 ## Operations
@@ -66,29 +75,40 @@ com.github.clojure-finance/clojask {:mvn/version "2.0.5"}
 *Solid arrows show required sequence; dotted arrows show optional paths.*
 
 **Available operations:**
-- **Transform:** `operate`, `set-type`, `set-parser`, `set-formatter`, `rename-col`
+- **Create:** `dataframe`
+- **Types:** `set-type`, `set-parser`, `set-formatter`
+- **Columns:** `operate`, `rename-col`, `select-col`, `delete-col`, `reorder-col`, `get-col-names`
 - **Filter:** `filter`
-- **Reshape:** `group-by`, `aggregate`, `melt`, `sort` (in-memory only)
-- **Combine:** `inner-join`, `left-join`, `right-join`, `rolling-join-forward`, `rolling-join-backward`
-- **Output:** `compute`, `print-df`, `preview`
+- **Group:** `group-by`, `aggregate`
+- **Combine:** `inner-join`, `left-join`, `right-join`, `outer-join`, `rolling-join-forward`, `rolling-join-backward`
+- **Output:** `compute` (with options such as `:select`, `:exclude`, `:melt`, `:header`), `print-df`, `preview`
+
+`sort` stands outside this pipeline: it sorts the dataframe's source file on disk and writes the result directly to an output file.
 
 ## Requirements
 
 - **OS:** macOS or Linux
 - **JDK:** 17 or newer (tested on 17, 21, and 25)
 
-**Required JVM flags** (add to `:jvm-opts` in project.clj/deps.edn):
+**Required JVM flags:**
 ```clojure
+;; project.clj
+:jvm-opts ["--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
+           "--enable-native-access=ALL-UNNAMED"]
+
+;; deps.edn, inside an alias (e.g. :aliases {:dev {...}}, run with -A:dev)
 :jvm-opts ["--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
            "--enable-native-access=ALL-UNNAMED"]
 ```
 
-The first flag is required for Agrona (used by Onyx's messaging). The second prevents warnings on JDK 24+ from lz4's native code.
+When running plain `java`, pass both flags on the command line.
+
+The first flag is required for Agrona (used by Onyx's messaging). Without it the first `compute` fails with `IllegalAccessError: class org.agrona.UnsafeApi ... cannot access class jdk.internal.misc.Unsafe`. The second is for lz4's native code: JDK 24+ prints a warning without it, and a future JDK will block the load.
 
 <details>
 <summary><strong>Running multiple Clojask processes</strong></summary>
 
-Each `compute` starts embedded ZooKeeper (port 2188) and Aeron (port 40200). To run multiple processes on one machine, configure different ports:
+Each `compute` starts embedded ZooKeeper (port 2188) and Aeron (port 40200), with Aeron's files in the default media-driver directory (`/dev/shm` on Linux). To run multiple processes on one machine, give each different settings:
 
 **System properties:**
 - `clojask.zookeeper.port`
@@ -105,7 +125,7 @@ Each `compute` starts embedded ZooKeeper (port 2188) and Aeron (port 40200). To 
 <details>
 <summary><strong>Logging</strong></summary>
 
-Onyx writes warnings and errors to `.clojask/clojask.log` in the working directory, rotated at 10 MB.
+Onyx writes warnings and errors to `.clojask/clojask.log` in the working directory, rotated at 10 MB with one backup.
 
 </details>
 
